<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/qr_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentQR">

    <TextView
        android:id="@+id/instructions_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/montserrat"
        android:text="@string/instructions"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/camera_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Switch
        android:id="@+id/switch_mode"
        android:layout_width="176dp"
        android:layout_height="65dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:checked="true"
        android:fontFamily="@font/montserrat"
        android:showText="true"
        android:splitTrack="false"
        android:text="@string/switch_txt"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textOff="@string/output_txt"
        android:textOn="@string/input_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:checked="true" />

    <SurfaceView
        android:id="@+id/camera_view"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/switch_mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>
